--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,33 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+.country-list {
+  list-style: none;
+  padding-left: 0px;
+  margin-top: 0px;
+}
+
+.list__item {
+  align-items: center;
+  display: flex;
+
+  height: auto;
+
+  font-size: inherit;
+}
+
+h2 {
+  font-size: 18px;
+
+  font-weight: normal;
+}
+
+.container {
+  align-items: center;
+  display: flex;
+}
+
+img {
+  padding-right: 12px;
+}
